src/objects/TR1__Job__c.object
<CustomObject>
    <fields>
        <fullName>Specialism__c</fullName>
        <label>Specialism, Quals, Experience &amp; Training</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>121</fullName>
                </value>
                <value>
                    <fullName>Accountancy - KS4</fullName>
                </value>
                <value>
                    <fullName>Accountancy - KS5</fullName>
                </value>
                <value>
                    <fullName>ADHD</fullName>
                </value>
                <value>
                    <fullName>Advanced Skills Teacher</fullName>
                </value>
                <value>
                    <fullName>All Primary</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Art and Design - KS3</fullName>
                </value>
                <value>
                    <fullName>Art and Design - KS4</fullName>
                </value>
                <value>
                    <fullName>Art and Design - KS5</fullName>
                </value>
                <value>
                    <fullName>Art - KS1 &amp; KS2</fullName>
                </value>
                <value>
                    <fullName>Art - KS3</fullName>
                </value>
                <value>
                    <fullName>Art - KS4</fullName>
                </value>
                <value>
                    <fullName>Art - KS5</fullName>
                </value>
                <value>
                    <fullName>ASD</fullName>
                </value>
                <value>
                    <fullName>ASDAN</fullName>
                </value>
                <value>
                    <fullName>Asperger Syndrome</fullName>
                </value>
                <value>
                    <fullName>Autistic Spectrum</fullName>
                </value>
                <value>
                    <fullName>Behaviour Specialist</fullName>
                </value>
                <value>
                    <fullName>BESD</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Biology - KS3</fullName>
                </value>
                <value>
                    <fullName>Biology - KS4</fullName>
                </value>
                <value>
                    <fullName>Biology - KS5</fullName>
                </value>
                <value>
                    <fullName>Booster Classes</fullName>
                </value>
                <value>
                    <fullName>Braille</fullName>
                </value>
                <value>
                    <fullName>British Sign Language Level 1</fullName>
                </value>
                <value>
                    <fullName>British Sign Language Level 2</fullName>
                </value>
                <value>
                    <fullName>Business Studies</fullName>
                </value>
                <value>
                    <fullName>Business Studies - Btec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>01:00 AM</fullName>
                </value>
                <value>
                    <fullName>01:30 AM</fullName>
                </value>
                <value>
                    <fullName>02:00 AM</fullName>
                </value>
                <value>
                    <fullName>02:30 AM</fullName>
                </value>
                <value>
                    <fullName>03:00 AM</fullName>
                </value>
                <value>
                    <fullName>03:30 AM</fullName>
                </value>
                <value>
                    <fullName>04:00 AM</fullName>
                </value>
                <value>
                    <fullName>04:30 AM</fullName>
                </value>
                <value>
                    <fullName>05:00 AM</fullName>
                </value>
                <value>
                    <fullName>05:30 AM</fullName>
                </value>
                <value>
                    <fullName>06:00 AM</fullName>
                </value>
                <value>
                    <fullName>06:30 AM</fullName>
                </value>
                <value>
                    <fullName>07:00 AM</fullName>
                </value>
                <value>
                    <fullName>07:30 AM</fullName>
                </value>
                <value>
                    <fullName>08:00 AM</fullName>
                </value>
                <value>
                    <fullName>08:30 AM</fullName>
                    <default>true</default>
                    <label>08:30 AM</label>
                </value>
                <value>
                    <fullName>09:00 AM</fullName>
                </value>
                <value>
                    <fullName>09:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>01:00 PM</fullName>
                </value>
                <value>
                    <fullName>01:30 PM</fullName>
                </value>
                <value>
                    <fullName>02:00 PM</fullName>
                </value>
                <value>
                    <fullName>02:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_LEA__c</fullName>
        <formula>TEXT ( TR1__Account__r.Sub_LEA__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Sector__c</fullName>
        <inlineHelpText>Nursery               = Ages 2 - 4
Primary               = Ages 5 - 11
Secondary           = Ages 11 - 18
SEN                    = Ages 5 - 18
Secondary PRU   = Ages 11 - 18
FE                      = Ages 16 +
Tutoring               = Ages 14 +</inlineHelpText>
        <label>Sub Sector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sector1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Civils / Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>Decent Homes</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>Fit Out</fullName>
                </value>
                <value>
                    <fullName>Mechanical &amp; Engineering / Building Services</fullName>
                </value>
                <value>
                    <fullName>Main Contracting</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Social Housing</fullName>
                </value>
                <value>
                    <fullName>Sub Contractors</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Nursery</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Secondary Pupil Referal Unit</fullName>
                </value>
                <value>
                    <fullName>SEN</fullName>
                </value>
                <value>
                    <fullName>Tutoring</fullName>
                </value>
                <value>
                    <fullName>Further Education</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject2__c</fullName>
        <label>Subject</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Cover</fullName>
                </value>
                <value>
                    <fullName>Accountancy</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Basic Skills Tutor</fullName>
                </value>
                <value>
                    <fullName>Business Studies</fullName>
                </value>
                <value>
                    <fullName>Careers Education</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classics</fullName>
                </value>
                <value>
                    <fullName>CL - Greek</fullName>
                </value>
                <value>
                    <fullName>CL - Latin</fullName>
                </value>
                <value>
                    <fullName>Communications Technology</fullName>
                </value>
                <value>
                    <fullName>Dance</fullName>
                </value>
                <value>
                    <fullName>Drama</fullName>
                </value>
                <value>
                    <fullName>DT - Electronics</fullName>
                </value>
                <value>
                    <fullName>DT - Graphics</fullName>
                </value>
                <value>
                    <fullName>DT Non-resistant Material</fullName>
                </value>
                <value>
                    <fullName>DT Resistant Material</fullName>
                </value>
                <value>
                    <fullName>DT - Textiles</fullName>
                </value>
                <value>
                    <fullName>E2E Tutor</fullName>
                </value>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Employability Tutor</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>English - Language</fullName>
                </value>
                <value>
                    <fullName>English - Literature</fullName>
                </value>
                <value>
                    <fullName>Environmental Studies</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Film</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject (Old)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accountancy</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Basic Skills Tutor</fullName>
                </value>
                <value>
                    <fullName>Business Studies</fullName>
                </value>
                <value>
                    <fullName>Careers Education</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classics</fullName>
                </value>
                <value>
                    <fullName>CL - Greek</fullName>
                </value>
                <value>
                    <fullName>CL - Latin</fullName>
                </value>
                <value>
                    <fullName>Communications Technology</fullName>
                </value>
                <value>
                    <fullName>Dance</fullName>
                </value>
                <value>
                    <fullName>Drama</fullName>
                </value>
                <value>
                    <fullName>DT - Electronics</fullName>
                </value>
                <value>
                    <fullName>DT - Graphics</fullName>
                </value>
                <value>
                    <fullName>DT Non-resistant Material</fullName>
                </value>
                <value>
                    <fullName>DT Resistant Material</fullName>
                </value>
                <value>
                    <fullName>DT - Textiles</fullName>
                </value>
                <value>
                    <fullName>E2E Tutor</fullName>
                </value>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Employability Tutor</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>English - General</fullName>
                </value>
                <value>
                    <fullName>English - Language</fullName>
                </value>
                <value>
                    <fullName>English - Literature</fullName>
                </value>
                <value>
                    <fullName>Environmental Studies</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Film</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sunday_Extra_Duties_Hours__c</fullName>
        <label>Sunday Extra Duties Hours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sunday_Shift__c</fullName>
        <label>Sunday Shift</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Full Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sunday_s_Shift__c</fullName>
        <label>Sunday&apos;s Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Full Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Account_Name__c</fullName>
        <formula>TR1__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Add_Associated_Qualifications__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Add Associated Qualifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Additional_Matching_Requirement__c</fullName>
        <label>Additional Matching Requirement</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Applicable_Days__c</fullName>
        <label>Days of the week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Bonus__c</fullName>
        <label>Bonus</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Booking_Type__c</fullName>
        <label>Booking Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perm</fullName>
                </value>
                <value>
                    <fullName>Promotional Day</fullName>
                </value>
                <value>
                    <fullName>Long Term</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Certification__c</fullName>
        <label>Certification</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Chatter_Team__c</fullName>
        <label>Chatter Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__City__c</fullName>
        <label>City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Client_Description__c</fullName>
        <label>Client Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TR1__Client_Job_Description__c</fullName>
        <label>Client Job Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TR1__Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled by Client</fullName>
                </value>
                <value>
                    <fullName>Cancelled by Job Owner</fullName>
                </value>
                <value>
                    <fullName>Candidate Declined Offer</fullName>
                </value>
                <value>
                    <fullName>Client Filled</fullName>
                </value>
                <value>
                    <fullName>Competitor Filled</fullName>
                </value>
                <value>
                    <fullName>Filled</fullName>
                </value>
                <value>
                    <fullName>No Suitable Candidates</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful Applicants</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>System Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Company_Website__c</fullName>
        <formula>TR1__Account__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Computer_Systems__c</fullName>
        <label>Computer Systems</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Email__c</fullName>
        <formula>TR1__Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Phone__c</fullName>
        <formula>TR1__Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>Amador</fullName>
                </value>
                <value>
                    <fullName>Butte</fullName>
                </value>
                <value>
                    <fullName>Calaveras</fullName>
                </value>
                <value>
                    <fullName>Colusa</fullName>
                </value>
                <value>
                    <fullName>Contra Costa</fullName>
                </value>
                <value>
                    <fullName>Del Norte</fullName>
                </value>
                <value>
                    <fullName>El Dorado</fullName>
                </value>
                <value>
                    <fullName>Fresno</fullName>
                </value>
                <value>
                    <fullName>Glenn</fullName>
                </value>
                <value>
                    <fullName>Humboldt</fullName>
                </value>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Inyo</fullName>
                </value>
                <value>
                    <fullName>Kern</fullName>
                </value>
                <value>
                    <fullName>Kings</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>Lassen</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Madera</fullName>
                </value>
                <value>
                    <fullName>Marin</fullName>
                </value>
                <value>
                    <fullName>Mariposa</fullName>
                </value>
                <value>
                    <fullName>Mendocino</fullName>
                </value>
                <value>
                    <fullName>Merced</fullName>
                </value>
                <value>
                    <fullName>Modoc</fullName>
                </value>
                <value>
                    <fullName>Mono</fullName>
                </value>
                <value>
                    <fullName>Monterey</fullName>
                </value>
                <value>
                    <fullName>Napa</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Days_Open__c</fullName>
        <formula>IF ( ISBLANK (  TR1__Closed_Date__c ) ,
TODAY () -  TR1__Open_Date__c ,
TR1__Closed_Date__c - TR1__Open_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Default_Interviewer_Location_Field__c</fullName>
        <label>Default Interviewer / Location Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TR1__Hiring_Manager__c</fullName>
                    <default>true</default>
                    <label>TR1__Hiring_Manager__c</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Description_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Description Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Division__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Education_Requirements__c</fullName>
        <label>Education Requirements</label>
        <length>8000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TR1__Education__c</fullName>
        <label>Education</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Employees__c</fullName>
        <formula>TR1__Account__r.NumberOfEmployees</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>01:00 AM</fullName>
                </value>
                <value>
                    <fullName>01:30 AM</fullName>
                </value>
                <value>
                    <fullName>02:00 AM</fullName>
                </value>
                <value>
                    <fullName>02:30 AM</fullName>
                </value>
                <value>
                    <fullName>03:00 AM</fullName>
                </value>
                <value>
                    <fullName>03:30 AM</fullName>
                </value>
                <value>
                    <fullName>04:00 AM</fullName>
                </value>
                <value>
                    <fullName>04:30 AM</fullName>
                </value>
                <value>
                    <fullName>05:00 AM</fullName>
                </value>
                <value>
                    <fullName>05:30 AM</fullName>
                </value>
                <value>
                    <fullName>06:00 AM</fullName>
                </value>
                <value>
                    <fullName>06:30 AM</fullName>
                </value>
                <value>
                    <fullName>07:00 AM</fullName>
                </value>
                <value>
                    <fullName>07:30 AM</fullName>
                </value>
                <value>
                    <fullName>08:00 AM</fullName>
                </value>
                <value>
                    <fullName>08:30 AM</fullName>
                </value>
                <value>
                    <fullName>09:00 AM</fullName>
                </value>
                <value>
                    <fullName>09:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>01:00 PM</fullName>
                </value>
                <value>
                    <fullName>01:30 PM</fullName>
                </value>
                <value>
                    <fullName>02:00 PM</fullName>
                </value>
                <value>
                    <fullName>02:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Estimated_End_Date__c</fullName>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Estimated_Perm_Fee__c</fullName>
        <formula>TR1__Salary_High__c *  TR1__Fee_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Perm Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Estimated_Retained_Fee__c</fullName>
        <formula>(TR1__Salary_High__c +  TR1__Retain_Estimated_Additional_Compensation__c) *  TR1__Fee_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Retained Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Estimated_Start_Date__c</fullName>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Experience_Requirements__c</fullName>
        <label>Experience Requirements</label>
        <length>16000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TR1__External_Job_Title__c</fullName>
        <label>External Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>